add an endpoint for auditing techMD DB contents
